--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "express": "^4.15.3",
+    "nodemon": "^1.11.0",
+    "style-loader": "^0.18.2",
+    "supervisor": "^0.12.0",
     "twig": "^1.10.5"
   },
   "devDependencies": {
@@ -8,12 +11,15 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.4.1"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "node index.js"
+    "build": "webpack -w",
+    "start": "nodemon --ext js,twig,html index.js"
   }
 }
