--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-slick": "^0.14.11",
+    "react-spotify-player": "^1.0.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.4.1"
   },
